<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".NovoContacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/novo_contacto"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_novoContacto_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/nome"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_novoContacto_morada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/morada"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_novoContacto_telemovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/telemovel"
        android:inputType="phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_novoContacto_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/sexo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_novoContacto_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_novoContacto_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:text="@string/save"
            android:onClick="insertContact"/>

        <Button
            android:id="@+id/bt_novoContacto_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:onClick="cancelHandler"
            android:text="@string/cancel" />

    </LinearLayout>


</LinearLayout>